<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_blanco"
    tools:context=".MainActivity">

    <View
        android:id="@+id/v_view1"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:background="@color/color_azul_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <View
        android:id="@+id/v_view2"
        android:layout_width="330dp"
        android:layout_height="90dp"
        android:background="@color/color_azul_2"
        app:layout_constraintBottom_toBottomOf="@+id/v_view1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/v_view1"
        tools:ignore="MissingConstraints" />

    <View
        android:id="@+id/v_view3"
        android:layout_width="100dp"
        android:layout_height="5dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/boton_operaciones_1"
        app:layout_constraintBottom_toTopOf="@+id/v_view2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/v_view1"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tv_respuesta_1"
        android:layout_width="320dp"
        android:layout_height="25dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:hint="@string/tv_bienvenida"
        android:textColorHint="@color/color_gris_2"
        android:fontFamily="sans-serif-smallcaps"
        android:textColor="@color/color_negro_2"
        android:textSize="25dp"
        android:textStyle="bold"
        android:paddingLeft="5dp"
        android:background="@color/color_blanco"
        app:layout_constraintBottom_toBottomOf="@+id/v_view1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/v_view2"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_respuesta_2"
        android:layout_width="320dp"
        android:layout_height="55dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="5dp"
        android:fontFamily="sans-serif-smallcaps"
        android:gravity="right"
        android:textColor="#403B41"
        android:textSize="55dp"
        android:textStyle="bold"
        android:paddingRight="5dp"
        android:background="@color/color_blanco"
        app:layout_constraintBottom_toBottomOf="@+id/v_view2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_respuesta_1"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/b_suma"
        android:layout_width="75dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/boton_operaciones_final"
        android:fontFamily="sans-serif-smallcaps"
        android:onClick="onClick"
        android:text="@string/suma"
        android:textAlignment="gravity"
        android:textAllCaps="true"
        android:textColor="@color/color_negro_1"
        android:textSize="40dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/v_view1" />

    <Button
        android:id="@+id/b_resta"
        android:layout_width="75dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/boton_operaciones_final"
        android:fontFamily="sans-serif-smallcaps"
        android:onClick="onClick"
        android:text="@string/resta"
        android:textAlignment="gravity"
        android:textAllCaps="true"
        android:textColor="@color/color_negro_1"
        android:textSize="40dp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/b_suma"
        app:layout_constraintTop_toBottomOf="@+id/v_view1" />

    <Button
        android:id="@+id/b_multiplicacion"
        android:layout_width="75dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/boton_operaciones_final"
        android:fontFamily="sans-serif-smallcaps"
        android:onClick="onClick"
        android:text="@string/multiplicación"
        android:textAlignment="gravity"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/color_negro_1"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/b_resta"
        app:layout_constraintTop_toBottomOf="@+id/v_view1" />

    <Button
        android:id="@+id/b_division"
        android:layout_width="75dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/boton_operaciones_final"
        android:fontFamily="sans-serif-smallcaps"
        android:onClick="onClick"
        android:text="@string/división"
        android:textAlignment="gravity"
        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
        android:textColor="@color/color_negro_1"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/b_multiplicacion"
        app:layout_constraintTop_toBottomOf="@+id/v_view1" />

    <Button
        android:id="@+id/b_siete"
        android:layout_width="75dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/boton_numeros_final"
        android:fontFamily="sans-serif-smallcaps"
        android:onClick="onClick"
        android:text="@string/siete"
        android:textAlignment="gravity"
        android:textAllCaps="true"
        android:textColor="@color/color_blanco"
        android:textSize="40dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/b_suma" />

    <Button
        android:id="@+id/b_ocho"
        android:layout_width="75dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/boton_numeros_final"
        android:fontFamily="sans-serif-smallcaps"
        android:onClick="onClick"
        android:text="@string/ocho"
        android:textAlignment="gravity"
        android:textAllCaps="true"
        android:textColor="@color/color_blanco"
        android:textSize="40dp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/b_siete"
        app:layout_constraintTop_toBottomOf="@+id/b_resta" />

    <Button
        android:id="@+id/b_nueve"
        android:layout_width="75dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/boton_numeros_final"
        android:fontFamily="sans-serif-smallcaps"
        android:onClick="onClick"
        android:text="@string/nueve"
        android:textAlignment="gravity"
        android:textAllCaps="true"
        android:textColor="@color/color_blanco"
        android:textSize="40dp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/b_ocho"
        app:layout_constraintTop_toBottomOf="@+id/b_multiplicacion" />

    <Button
        android:id="@+id/b_cuatro"
        android:layout_width="75dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/boton_numeros_final"
        android:fontFamily="sans-serif-smallcaps"
        android:onClick="onClick"
        android:text="@string/cuatro"
        android:textAlignment="gravity"
        android:textAllCaps="true"
        android:textColor="@color/color_blanco"
        android:textSize="40dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/b_siete" />

    <Button
        android:id="@+id/b_cinco"
        android:layout_width="75dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/boton_numeros_final"
        android:fontFamily="sans-serif-smallcaps"
        android:onClick="onClick"
        android:text="@string/cinco"
        android:textAlignment="gravity"
        android:textAllCaps="true"
        android:textColor="@color/color_blanco"
        android:textSize="40dp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/b_cuatro"
        app:layout_constraintTop_toBottomOf="@+id/b_ocho" />

    <Button
        android:id="@+id/b_seis"
        android:layout_width="75dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/boton_numeros_final"
        android:fontFamily="sans-serif-smallcaps"
        android:onClick="onClick"
        android:text="@string/seis"
        android:textAlignment="gravity"
        android:textAllCaps="true"
        android:textColor="@color/color_blanco"
        android:textSize="40dp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/b_cinco"
        app:layout_constraintTop_toBottomOf="@+id/b_nueve" />

    <Button
        android:id="@+id/b_uno"
        android:layout_width="75dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/boton_numeros_final"
        android:fontFamily="sans-serif-smallcaps"
        android:onClick="onClick"
        android:text="@string/uno"
        android:textAlignment="gravity"
        android:textAllCaps="true"
        android:textColor="@color/color_blanco"
        android:textSize="40dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/b_cuatro" />

    <Button
        android:id="@+id/b_dos"
        android:layout_width="75dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/boton_numeros_final"
        android:fontFamily="sans-serif-smallcaps"
        android:onClick="onClick"
        android:text="@string/dos"
        android:textAlignment="gravity"
        android:textAllCaps="true"
        android:textColor="@color/color_blanco"
        android:textSize="40dp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/b_uno"
        app:layout_constraintTop_toBottomOf="@+id/b_cinco" />

    <Button
        android:id="@+id/b_tres"
        android:layout_width="75dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/boton_numeros_final"
        android:fontFamily="sans-serif-smallcaps"
        android:onClick="onClick"
        android:text="@string/tres"
        android:textAlignment="gravity"
        android:textAllCaps="true"
        android:textColor="@color/color_blanco"
        android:textSize="40dp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/b_dos"
        app:layout_constraintTop_toBottomOf="@+id/b_seis" />

    <Button
        android:id="@+id/b_cero"
        android:layout_width="75dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/boton_numeros_final"
        android:fontFamily="sans-serif-smallcaps"
        android:onClick="onClick"
        android:text="@string/cero"
        android:textAlignment="gravity"
        android:textAllCaps="true"
        android:textColor="@color/color_blanco"
        android:textSize="40dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/b_uno"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/b_doblecero"
        android:layout_width="75dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/boton_numeros_final"
        android:fontFamily="sans-serif-smallcaps"
        android:onClick="onClick"
        android:text="@string/doblecero"
        android:textAlignment="gravity"
        android:textAllCaps="true"
        android:textColor="@color/color_blanco"
        android:textSize="40dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/b_cero"
        app:layout_constraintTop_toBottomOf="@+id/b_dos"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/b_punto"
        android:layout_width="75dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/boton_numeros_final"
        android:fontFamily="sans-serif-smallcaps"
        android:onClick="onClick"
        android:text="@string/punto"
        android:textAlignment="gravity"
        android:textAllCaps="true"
        android:textColor="@color/color_blanco"
        android:textSize="40dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/b_doblecero"
        app:layout_constraintTop_toBottomOf="@+id/b_tres"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/b_delete"
        android:layout_width="75dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/boton_borradores_final"
        android:fontFamily="sans-serif-smallcaps"
        android:onClick="onClick"
        android:text="@string/del"
        android:textAlignment="gravity"
        android:textAllCaps="true"
        android:textColor="@color/color_blanco"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/b_nueve"
        app:layout_constraintTop_toBottomOf="@+id/b_division" />

    <Button
        android:id="@+id/b_ac"
        android:layout_width="75dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/boton_borradores_final"
        android:fontFamily="sans-serif-smallcaps"
        android:onClick="onClick"
        android:text="@string/ac"
        android:textAlignment="gravity"
        android:textAllCaps="true"
        android:textColor="@color/color_blanco"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/b_seis"
        app:layout_constraintTop_toBottomOf="@+id/b_delete" />

    <Button
        android:id="@+id/b_igual"
        android:layout_width="75dp"
        android:layout_height="128dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/boton_igual_final"
        android:fontFamily="sans-serif-smallcaps"
        android:onClick="onClick"
        android:text="@string/igual"
        android:textAlignment="gravity"
        android:textAllCaps="true"
        android:textColor="@color/color_negro_1"
        android:textSize="60dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/b_tres"
        app:layout_constraintTop_toBottomOf="@+id/b_ac"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/ad_banner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="160dp"
        app:adSize="BANNER"
        app:adUnitId="@string/ad_banner"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/b_punto"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints">

    </com.google.android.gms.ads.AdView>

</androidx.constraintlayout.widget.ConstraintLayout>